{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 227,
  "lineage": "6d27474d-f061-1647-64a1-bf23a69d6cdc",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "Pranshu_test_public_private_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/natGateways/Pranshu-test-public-private-ngw-1",
            "idle_timeout_in_minutes": 4,
            "location": "eastus",
            "name": "Pranshu-test-public-private-ngw-1",
            "resource_group_name": "Pranshu-rg",
            "resource_guid": "d095e2e6-d3f2-431f-9329-ea4de263e458",
            "sku_name": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.Pranshu_nginx_poc_auth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Pranshu_private_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/networkSecurityGroups/Pranshu-private-nsg",
            "location": "eastus",
            "name": "Pranshu-private-nsg",
            "resource_group_name": "Pranshu-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowCidrBlockCustomAnyInbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "10.0.2.0/23",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Pranshu_nginx_poc_auth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/networkSecurityGroups/private-nsg",
            "location": "eastus",
            "name": "private-nsg",
            "resource_group_name": "Pranshu-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnyCustomAnyInbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "10.0.2.0/23",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Pranshu_nginx_poc_auth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Pranshu_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/publicIPAddresses/Pranshu-private-subnet",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.235.245.245",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "Pranshu-private-subnet",
            "resource_group_name": "Pranshu-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.Pranshu_nginx_poc_auth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aca_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.6.0/23"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/virtualNetworks/Pranshu-nginx-auth-poc-vnet/subnets/private-subnet",
            "name": "private-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Pranshu-rg",
            "virtual_network_name": "Pranshu-nginx-auth-poc-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.Pranshu_nginx_poc_auth",
            "azurerm_virtual_network.Pranshu_nginx_auth_poc_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aca_pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/23"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/virtualNetworks/Pranshu-nginx-auth-poc-vnet/subnets/public-subnet",
            "name": "public-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Pranshu-rg",
            "virtual_network_name": "Pranshu-nginx-auth-poc-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.Pranshu_nginx_poc_auth",
            "azurerm_virtual_network.Pranshu_nginx_auth_poc_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/virtualNetworks/Pranshu-nginx-auth-poc-vnet/subnets/private-subnet",
            "network_security_group_id": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/networkSecurityGroups/private-nsg",
            "subnet_id": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/virtualNetworks/Pranshu-nginx-auth-poc-vnet/subnets/private-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.Pranshu_nginx_poc_auth",
            "azurerm_subnet.aca_private_subnet",
            "azurerm_virtual_network.Pranshu_nginx_auth_poc_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Pranshu_nginx_auth_poc_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "02199d63-03d3-474c-9c0b-965f4b6e9071",
            "id": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/virtualNetworks/Pranshu-nginx-auth-poc-vnet",
            "location": "eastus",
            "name": "Pranshu-nginx-auth-poc-vnet",
            "resource_group_name": "Pranshu-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": false,
                "delegation": [
                  {
                    "name": "Microsoft.App.environments",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.App/environments"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/virtualNetworks/Pranshu-nginx-auth-poc-vnet/subnets/private-subnet2",
                "name": "private-subnet2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/networkSecurityGroups/Pranshu-private-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/23"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "Microsoft.App/environments",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.App/environments"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/virtualNetworks/Pranshu-nginx-auth-poc-vnet/subnets/public-subnet",
                "name": "public-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.6.0/23"
                ],
                "default_outbound_access_enabled": false,
                "delegation": [
                  {
                    "name": "Microsoft.App/environments",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.App/environments"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/virtualNetworks/Pranshu-nginx-auth-poc-vnet/subnets/private-subnet",
                "name": "private-subnet",
                "private_endpoint_network_policies": "NetworkSecurityGroupEnabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/972e2591-f0b5-4881-a4ec-6faedc78134c/resourceGroups/Pranshu-rg/providers/Microsoft.Network/networkSecurityGroups/private-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.Pranshu_nginx_poc_auth"
          ]
        }
      ]
    }
  ]
}